--- a/views/Registro.twig
+++ b/views/Registro.twig
@@ -54,20 +54,20 @@
 <div class="container">
     <h2>Formulario de Registro</h2>
     <p class="login-message">Si ya tienes una cuenta, <a href="/Login">entra aquí</a>.</p>
-    <form action="/submit_registration" method="post">
+    <form action="/crearUsuario" method="post">
         <label for="fullname">Nombre Completo:</label>
-        <input type="text" id="fullname" name="fullname" required>
+        <input type="text" id="fullname" name="nombre" required>
 
         <label for="email">Correo Electrónico:</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="correo_electronico" required>
 
         <label for="password">Contraseña:</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password" name="contrasena" required>
 <label>
             <input type="checkbox" id="termsCheckbox" name="terms" required>
             Acepto los <a href="terminos_y_condiciones.html">términos y condiciones</a>
         </label>
-
+        <input type="hidden" id="role_id" name="role_id" value="1">
         <button type="submit" id="submitButton">Registrarse</button>
     </form>
     <img src="https://induccionuabc.files.wordpress.com/2019/08/listas_grupos_curso_induccion.png?w=353&h=491" class="imagen-estilo">
