--- a/views/donacion.twig
+++ b/views/donacion.twig
@@ -187,7 +187,7 @@
 <body>
 
  <div class="header">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTpp9PdI7lJeIwl5_acGIIBCXR7pN9OfXGzhCN_0hlscxlEAubtetXa8MQly1dbjT-v964&usqp=CAU"">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTpp9PdI7lJeIwl5_acGIIBCXR7pN9OfXGzhCN_0hlscxlEAubtetXa8MQly1dbjT-v964&usqp=CAU">
     Universidad Autónoma de Baja California. 
     <br>Por la realización plena del hombre.
     <a href="http://localhost:3000" class="logout-button">Logout</a>
