--- a/views/login.twig
+++ b/views/login.twig
@@ -198,12 +198,11 @@
                     <path d="m 40,120.00016 239.99984,-3.2e-4 c 0,0 24.99263,0.79932 25.00016,35.00016 0.008,34.20084 -25.00016,35-25.00016,35 h -239.99984 c 0,-0.0205 -25,4.01348 -25,38.5 0,34.48652 25,38.5 25,38.5 h 215 c 0,0 20,-0.99604 20,-25 0,-24.00396 -20,-25 -20,-25 h -190 c 0,0 -20,1.71033 -20,25 0,24.00396 20,25 20,25 h 168.57143"/>
                 </svg>
                 <div class="form">
-                    <form action="/iniciarSesion" method="post">
+                    <form action="/iniciarSesion" method="post" id="loginForm">
                         <label for="email"><strong>Correo Electrónico</strong></label>
                         <input type="email" id="email" name="correo_electronico">
                         <label for="password"><strong>Contraseña</strong></label>
                         <input type="password" id="password" name="contrasena">
-                        <div class="g-signin2" data-onsuccess="onSignIn"></div>
                         <input type="submit" id="submit" value="Iniciar Sesión" class="bold-button">
                     </form>
                 </div>
@@ -264,38 +263,8 @@
         });
     </script>
 </svg>
-<script>
-    function onSignIn(googleUser) {
-        // Aquí puedes obtener la información del usuario usando googleUser.getBasicProfile()
-        // y enviarla al servidor para el proceso de inicio de sesión.
-        console.log('Usuario autenticado:', googleUser.getBasicProfile());
-    }
 
-    function renderGoogleSignInButton() {
-        gapi.signin2.render('google-signin-container', {
-            'scope': 'profile email',
-            'width': 240,
-            'height': 50,
-            'longtitle': true,
-            'theme': 'dark',
-            'onsuccess': onSignIn
-        });
-    }
-</script>
 
-<script>
-    function startGoogleSignIn() {
-        gapi.load('auth2', function () {
-            gapi.auth2.init({
-                client_id: '696835881798-df73an1f0camplh5ebo18vmpr1a9v300.apps.googleusercontent.com'
-            }).then(function () {
-                renderGoogleSignInButton();
-            });
-        });
-    }
-
-    startGoogleSignIn();
-</script>
 
 </body>
 </html>
