--- a/views/Registro.twig
+++ b/views/Registro.twig
@@ -82,7 +82,7 @@
             return false; // Cancela el envío del formulario
         } else {
             // Si todo está correcto, redirecciona a la página de donación
-            window.location.href = "/donacion";
+            window.location.href = "/login";
             return false; // Esto previene que el formulario se envíe de la manera tradicional
         }
     };
