Creación de donaciones una vez enviado y reconocido la imagen de recibo, asimismo redirecciona y cierra sesión del primer usuario activo

--- a/views/Factura.twig
+++ b/views/Factura.twig
@@ -35,13 +35,13 @@
 </head>
 <body>
  <div class="header">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTpp9PdI7lJeIwl5_acGIIBCXR7pN9OfXGzhCN_0hlscxlEAubtetXa8MQly1dbjT-v964&usqp=CAU"">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTpp9PdI7lJeIwl5_acGIIBCXR7pN9OfXGzhCN_0hlscxlEAubtetXa8MQly1dbjT-v964&usqp=CAU">
     Universidad Autónoma de Baja California. 
     <br>Por la realización plena del hombre.
     <a href="http://localhost:3000" class="logout-button">Logout</a>
 </div>
 
-    <h2>Para proceder con la facturación, es necesario que subas tu archivo PDF de situación fiscal. Este archivo es esencial para verificar tu información fiscal y completar el proceso de facturación. Por favor, selecciona y sube tu archivo utilizando el botón de abajo.</h2>
+    <h2>Para proceder con la facturación, es necesario que subas tu archivo en formato PNG/JPG de situación fiscal. Este archivo es esencial para verificar tu información fiscal y completar el proceso de facturación. Por favor, selecciona y sube tu archivo utilizando el botón de abajo.</h2>
     <form action="/uploadRFC/file-uploadRFC" method="post" enctype="multipart/form-data">
         <input type="file" id="fileUpload" name="receipt" accept="image/*,application/pdf"><br><br>
         <label for="fileUpload">Selecciona el archivo PDF:</label>
