--- a/views/Registro.twig
+++ b/views/Registro.twig
@@ -83,7 +83,7 @@
         } else {
             // Si todo está correcto, redirecciona a la página de donación
             window.location.href = "/login";
-            return false; // Esto previene que el formulario se envíe de la manera tradicional
+            return true; // Esto previene que el formulario se envíe de la manera tradicional
         }
     };
 </script>
